--- a/doc/文件结构.md
+++ b/doc/文件结构.md
@@ -19,7 +19,7 @@
 
 课程文件夹设置
 
-- 课程文件夹
+- 年级_课程文件夹(比如大一\_数学分析)
   - README.md[用来存放课程总体攻略心得,如果课程内容过于庞大,建议单独开个仓库,然后在readme内加上链接]
   - README.asset[用于存放README.md所需图片]
     - 图片.png
@@ -28,8 +28,9 @@
     - 年份-期中/期末-试卷.pdf[如果图片太多需要合并为pdf]
     - 年份-期中/期末-试卷参考答案
   - 作业
-    - 作业参考书.pdf
-    - 作业难题解析.md/doc[平时一些题目的解析]
+    - 界号，比如21级
+      - 作业参考书.pdf
+      - 作业难题解析.md/doc[平时一些题目的解析]
   - 课件与教材
     - 教材名[部分教材过大,因此需要切分,因此放入文件夹]
       - 教材1.pdf
